# ZK-PUF-Zephyr-Demo

./: README.md
application/: CMakeLists.txt  prj.conf  west.yml
application/src/: bao_config.c  bao_config.h  config_data.c  config_data.h  flash_handler.h  main.c  puf_prover.c  utils.c
application/src/crosscon_hv/: crosscon_hv_config.c  crosscon_hv_config.h  hv_functions.c  hv_functions.h
application/src/crosscon_hv/crosscon_hv_tee/: crosscon_hv_tee.c  tee_core_compat.h  tee_internal_api.h
application/src/crosscon_hv/tee_mockcore/: tee_internal_api.h
application/src/crypto/: crypto.h
application/src/crypto/mbedtls/: crypto_handler.c  crypto_handler.h
application/src/puf/: puf_handler.h  puf_prover.c  puf_prover.h  puf_prover_hardcoded_values.c
application/src/puf/lpc55s69/: linker_puf_sections.ld  puf_handler.c  puf_handler.h  puf_handler_hardcoded_values.c  puf_hardcoded_values.c  puf_prover.c  puf_prover.h
application/src/tee_mockcore/: tee_internal_api.h
scripts/: dump.txt  hex_to_array.py  hex_to_c_array.py  hex_to_decimal.py
scripts/proofs/: README.md  hash_to_curve_h_calc.sage  proof_full_calc.sage  proof_verifier_calc.sage  proof_verifier_calc_tinyec.py
